--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.1",
     "socket.io": "^4.0.1",
+    "throttle-debounce": "^3.0.1",
     "webpack": "^5.36.2"
   },
   "devDependencies": {
