--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.1",
+    "lodash": "^4.17.21",
     "socket.io": "^4.0.1",
     "throttle-debounce": "^3.0.1",
     "webpack": "^5.36.2"
