--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prod": "cross-env NODE_ENV=production webpack --mode production  && echo \"\n\n\" && node src/server/server.js",
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "develop": "cross-env NODE_ENV=development node src/server/server.js",
-    "all": "cross-env NODE_ENV=development webpack --mode development && echo \"\n\n\" && node src/server/server.js"
+    "all": "cross-env NODE_ENV=development webpack --mode development && echo \"\n\n\" && nodemon src/server/server.js",
+    "devStartAuth": "nodemon  src/server/authServer.js"
   },
   "repository": {
     "type": "git",
@@ -29,8 +30,10 @@
   },
   "homepage": "https://github.com/kremenevskiy/io.game#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "socket.io": "^4.0.1",
     "throttle-debounce": "^3.0.1",
@@ -43,6 +46,7 @@
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "nodemon": "^2.0.7",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "terser-webpack-plugin": "^5.1.1",
     "webpack-cli": "^4.6.0"
