--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "develop": "cross-env NODE_ENV=development node src/server/server.js",
     "all": "cross-env NODE_ENV=development webpack --mode development && echo \"\n\n\" && nodemon src/server/server.js",
-    "devStartAuth": "nodemon  src/server/authServer.js"
+    "devStartAuth": "nodemon  src/server/authServer.js",
+    "test": "nodemon src/server/servertest.js"
   },
   "repository": {
     "type": "git",
@@ -30,11 +31,15 @@
   },
   "homepage": "https://github.com/kremenevskiy/io.game#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.11.1",
     "html-webpack-plugin": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mongoose": "^5.12.11",
     "socket.io": "^4.0.1",
     "throttle-debounce": "^3.0.1",
     "webpack": "^5.36.2"
